update web page tutoriel-outils with collapse

--- a/web_pages/tutoriel-outils.html
+++ b/web_pages/tutoriel-outils.html
@@ -1,96 +1,121 @@
-<h5>Manipuler des donn&eacute;es</h5>
+<h3>Manipuler des donn&eacute;es</h3>
 
 <p>&nbsp;</p>
 
-<p>Vous disposez de cinq familles d&#39;outils pour manipuler vos donn&eacute;es :</p>
+<p>Vous disposez de cinq familles d&#39;outils pour manipuler vos donn&eacute;es. N'h&eacute;sitez pas &agrave; consulter l'aide pour apprendre &agrave; utiliser les outils.</p>
 
 <h5>Regrouper des lignes</h5>
 
 <p>Cet outil permet de regrouper des lignes par cat&eacute;gorie (par type d&#39;environnement par exemple) en faisant un calcul (une moyenne par exemple) sur les donn&eacute;es d&#39;une autre colonne.</p>
 
-<!-- bouton 1 -->
-<p>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseRegrouper" aria-expanded="false" aria-controls="collapseRegrouper">
-    Utiliser ce type d'outil ou en apprendre plus sur le fonctionnement
-  </button>
-</p>
-<div class="collapse" id="collapseRegrouper">
+<p><a class="btn btn-primary" href="/tools/bricks_tool/dataplyr/">R&eacute;sumer les donn&eacute;es</a></p>
+
+<p><a class="btn btn-primary" data-toggle="collapse" href="#collapsedataplyr" role="button" aria-expanded="false" aria-controls="collapsedataplyr">
+En savoir plus </a></p>
+
+<div class="collapse" id="collapsedataplyr">
   <div class="card card-body">
     <img alt="" src="http://formation.vigienature-ecole.fr/bricks/filtrer.gif" style="width:220px" />
-    <p style="text-align:center"><input name="resume" type="button" value="Utiliser l'outil résumer des données" /></p>
   </div>
 </div>
-
 
 <hr />
 <h5>Faire des calculs sur plusieurs lignes ou plusieurs colonnes</h5>
 
 <p>Ces outils cr&eacute;ent une nouvelle colonne ou une nouvelle ligne qui est le r&eacute;sultat d&#39;un calcul.</p>
 
-<!-- bouton 2 -->
-<p>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseCalculs" aria-expanded="false" aria-controls="collapseCalculs">
-    Utiliser ce type d'outil ou en apprendre plus sur le fonctionnement
-  </button>
-</p>
-<div class="collapse" id="collapseCalculs">
+<!--columns-simple-operation-->
+<p><a class="btn btn-primary" href="/tools/bricks_tool/columns-simple-operation/">Op&eacute;ration sur des colonnes</a></p>
+
+<p><a class="btn btn-primary" data-toggle="collapse" href="#columns-simple-operation" role="button" aria-expanded="false" aria-controls="columns-simple-operation">
+En savoir plus </a></p>
+
+<div class="collapse" id="columns-simple-operation">
   <div class="card card-body">
-    <img alt="" src="http://formation.vigienature-ecole.fr/bricks/selectionner.gif" style="width:220px" /></td>
-  	<p style="text-align:center"><input name="columns_operation" type="button" value="Utiliser l'outil opération sur des colonnes" /></p>
-	  <p style="text-align:center"><input name="row_operation" type="button" value="Utiliser l'outil opération sur des lignes" /></p>
+    <img alt="" src="http://formation.vigienature-ecole.fr/bricks/filtrer.gif" style="width:220px" />
+  </div>
+</div>
+
+<!--row-simple-operation-->
+<p><a class="btn btn-primary" href="/tools/bricks_tool/row-simple-operation/">Op&eacute;ration sur des lignes</a></p>
+
+<p><a class="btn btn-primary" data-toggle="collapse" href="#collapseOperationLigne" role="button" aria-expanded="false" aria-controls="collapseOperationLigne">
+En savoir plus </a></p>
+
+<div class="collapse" id="collapseOperationLigne">
+  <div class="card card-body">
+    <img alt="" src="http://formation.vigienature-ecole.fr/bricks/filtrer.gif" style="width:220px" />
   </div>
 </div>
 
 <hr />
 <h5>Trier, filtrer et masquer des colonnes</h5>
 
-<table border="0" cellpadding="1" cellspacing="1" style="width:90%">
-	<tbody>
-		<tr>
-			<td><img alt="" src="http://formation.vigienature-ecole.fr/bricks/trier.gif" style="width:220px" /></td>
-			<td>
-			<p>Ces outils permettent de changer l&#39;organisation des donn&eacute;es dans les colonnes en les triant (du plus petit au plus grand par exemple), en les filtrant (en affichant qu&#39;une seule valeur) ou en ne gardant que les colonnes jug&eacute;es utiles.</p>
+<p>Ces outils permettent de changer l&#39;organisation des donn&eacute;es dans les colonnes en les triant (du plus petit au plus grand par exemple), en les filtrant (en affichant qu&#39;une seule valeur) ou en ne gardant que les colonnes jug&eacute;es utiles.</p>
 
-			<p style="text-align:center"><input name="xxxx" type="button" value="xxxx" /></p>
+<!--Trier est manquant pour le moment-->
+<!--Sort-->
+<p><a class="btn btn-primary" href="/tools/bricks_tool/sort/">Trier les donn&eacute;es</a></p>
 
-			<p style="text-align:center"><input name="yyyy" type="button" value="yyyy" /></p>
-			</td>
-		</tr>
-	</tbody>
-</table>
 
-<hr />
-<h5>Chercher/remplacer</h5>
+<p><a class="btn btn-primary" data-toggle="collapse" href="#collapseSort" role="button" aria-expanded="false" aria-controls="collapseSort">
+En savoir plus </a></p>
 
-<table border="0" cellpadding="1" cellspacing="1" style="width:90%">
-	<tbody>
-		<tr>
-			<td><img alt="" src="http://formation.vigienature-ecole.fr/bricks/filtrer.gif" style="height:182px; width:220px" /></td>
-			<td>
-			<p>Cet outil permet de chercher puis remplacer des caract&egrave;res dans une ou plusieurs colonnes</p>
+<div class="collapse" id="collapseSort">
+  <div class="card card-body">
+    <img alt="" src="http://formation.vigienature-ecole.fr/bricks/filtrer.gif" style="width:220px" />
+  </div>
+</div>
 
-			<p style="text-align:center"><input name="regex_replace" type="button" value="Utiliser l'outil chercher/remplacer" /></p>
-			</td>
-		</tr>
-	</tbody>
-</table>
+<!--filter-->
+<p><a class="btn btn-primary" href="/tools/bricks_tool/filter/">S&eacute;lectionner des lignes</a></p>
+
+<p><a class="btn btn-primary" data-toggle="collapse" href="#collapsefilter" role="button" aria-expanded="false" aria-controls="collapsefilter">
+En savoir plus </a></p>
+
+<div class="collapse" id="collapsefilter">
+  <div class="card card-body">
+    <img alt="" src="http://formation.vigienature-ecole.fr/bricks/filtrer.gif" style="width:220px" />
+  </div>
+</div>
+
+<!--select-->
+<p><a class="btn btn-primary" href="/tools/bricks_tool/select/">S&eacute;lectionner ou supprimer des colonnes</a></p>
+
+<p><a class="btn btn-primary" data-toggle="collapse" href="#collapseselect" role="button" aria-expanded="false" aria-controls="collapseselect">
+En savoir plus </a></p>
+
+<div class="collapse" id="collapseselect">
+  <div class="card card-body">
+    <img alt="" src="http://formation.vigienature-ecole.fr/bricks/filtrer.gif" style="width:220px" />
+  </div>
+</div>
 
 <hr />
 <h5>Extraire de l&#39;information &agrave; partir de colonnes</h5>
 
-<table border="0" cellpadding="1" cellspacing="1" style="width:90%">
-	<tbody>
-		<tr>
-			<td><img alt="" src="http://formation.vigienature-ecole.fr/bricks/filtrer.gif" style="height:182px; width:220px" /></td>
-			<td>
-			<p>Ces outils permettent de r&eacute;cup&eacute;rer des informations &agrave; partir de chaines de caract&egrave;res d&#39;une ou plusieurs colonnes (obtenir le mois &agrave; partir d&#39;une date compl&egrave;te, obtenir le d&eacute;partement &agrave; partir d&#39;un code postal...).</p>
+<p>Ces outils permettent de r&eacute;cup&eacute;rer des informations &agrave; partir de chaines de caract&egrave;res d&#39;une ou plusieurs colonnes (obtenir le mois &agrave; partir d&#39;une date compl&egrave;te, obtenir le d&eacute;partement &agrave; partir d&#39;un code postal...).</p>
 
-			<p style="text-align:center"><input name="convert_dates" type="button" value="Utiliser l'outil convertir des dates" /></p>
+<!--select-characters-->
+<p><a class="btn btn-primary" href="/tools/bricks_tool/select-characters/">Extraire des caract&egrave;res d'une une colonne</a></p>
 
-			<p style="text-align:center"><input name="merge_columns" type="button" value="Utiliser l'outil fusionner deux colonnes" /></p>
+<p><a class="btn btn-primary" data-toggle="collapse" href="#collapseselect-characters" role="button" aria-expanded="false" aria-controls="collapseselect-characters">
+En savoir plus </a></p>
 
-			<p style="text-align:center"><input name="hhh" type="button" value="hhh" /></p>
-			</td>
-		</tr>
-	</tbody>
-</table>
+<div class="collapse" id="collapseselect-characters">
+  <div class="card card-body">
+    <img alt="" src="http://formation.vigienature-ecole.fr/bricks/filtrer.gif" style="width:220px" />
+  </div>
+</div>
+
+<!--lubridate_convert-->
+<p><a class="btn btn-primary" href="/tools/bricks_tool/lubridate_convert/">Convertir des dates</a></p>
+
+<p><a class="btn btn-primary" data-toggle="collapse" href="#collapselubridate_convert" role="button" aria-expanded="false" aria-controls="collapselubridate_convert">
+En savoir plus </a></p>
+
+<div class="collapse" id="collapselubridate_convert">
+  <div class="card card-body">
+    <img alt="" src="http://formation.vigienature-ecole.fr/bricks/filtrer.gif" style="width:220px" />
+  </div>
+</div>
