--- a/Scénario/vdt-difficulte-abondance.html
+++ b/Scénario/vdt-difficulte-abondance.html
@@ -163,7 +163,7 @@ a un effet sur la variable &agrave; expliquer (Y) : <strong>Abondance</strong></
 
 <ul>
 	<li>Il est aussi possible de se poser la m&ecirc;me question pour une autre colonne comme l&#39;environnement par exemple.</li>
-	<li>Une autre possibilit&eacute; est encore de calculer la diversit&eacute; plut&ocirc;t que l&#39;abondance totale des vers de terre (en comptant le nombre de cellule non nulles pour chaque observation).</li>
+	<li>Une autre possibilit&eacute; est encore de calculer la diversit&eacute; plut&ocirc;t que l&#39;abondance totale des vers de terre (en comptant le nombre de cellules non nulles pour chaque observation).</li>
 </ul>
 
 <p>&nbsp;</p>
