--- a/Scénario/escargots-saison-abondance.html
+++ b/Scénario/escargots-saison-abondance.html
@@ -69,7 +69,7 @@ Voulez-vous faire une autre opération ? <strong>non</strong></p>
 </div>
 </div>
 
-<p style="margin-left:40px">Maintenant que les données sont résumées à l'échelle d'une observation, nous allons transformer la date pour garder 3 périodes (Les données sont rentrées par saisons mais elles sont stockées à trois dates environ au milieu de chaque saison). Nous allons donc extraire le mois pour chaque valeur.</p>
+<p style="margin-left:40px">Maintenant que les données sont résumées à l'échelle d'une observation, nous allons transformer la date pour garder 3 périodes (Les données sont rentrées par saisons mais elles sont stockées à trois dates environ au milieu de chaque saison). Nous allons donc extraire la saison pour chaque valeur.</p>
 
 <p style="font-weight:bolder; margin-left:40px"><a aria-controls="collapsescenario1help2b" aria-expanded="false" data-toggle="collapse" href="#collapsescenario1help2b" role="button">&darr; Comment faire concrètement &darr;</a></p>
 
